--- a/Liboke_ya_Congo.mw
+++ b/Liboke_ya_Congo.mw
@@ -1,13 +1,15 @@
 {{lingála tɛ́}}
 '''A traduire      to translate'''
 
-'''Liboke ya Congo''' is a [[Red Hat 9]] based operating system in lingála, installed using "Slinky" from The RULE-Project, and therefore running on even outdated [[esálela|PC]]s with todays speed and the most up to date applications like Abiword 2, OpenOffice 1.1, the latest Acrobat Reader or Webbrowsers like Opera 7.5 and Firefox.
+'''Liboke ya Congo''' is a [[Red Hat|Red Hat 9]] based operating system in [[lingála]], installed using "Slinky" from The RULE-Project, and therefore running on even outdated [[esálela|PC]]s with todays speed and the most up to date applications like Abiword 2, [[OpenOffice]] 1.1, the latest Acrobat Reader or Webbrowsers like Opera 7.5 and Firefox.
 
-"Liboke ya Congo" includes a set of Lingála-localized Applications. Most of the work of translation and research has been done by BnB-staff in [[Kinshasa]]. The "Liboke ya Congo" will help to bring IT-knowledge and better means of communication to many people in [[DRC]] and its neighbour-countries. Also it can be seen as an important step in building up a self-sustainable, localized IT-culture.
+"Liboke ya Congo" includes a set of Lingála-localized Applications. Most of the work of translation and research has been done by BnB-staff in [[Kinshasa]]. The "Liboke ya Congo" will help to bring IT-knowledge and better means of communication to many people in [[Kɔ́ngɔ-Kinshasa|RKD]] and its neighbour-countries. Also it can be seen as an important step in building up a self-sustainable, localized IT-culture.
 
 ==Further informations==
 *Contactperson Kinshasa: Léon BUKASA TSHIBAKA, Tel (+243) 819 84 45 10, Email: libokeyacongo@yahoo.fr
 *Contactperson Vienna: Ingo LANTSCHNER, Tel (+43-1) 595 57 66, Email: ingo@vum.at
 
-==External Link==
+==Nkásá o libándá==
 The RULE-Project, an open source-initiative on functional recycling of PC-hardware; see also http://www.rule-project.org
+
+[[category:esálela]]
