/* Mankásá o libándá */   +iw

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -50,10 +50,11 @@ Comment améliorer un article sur une langue?
 [[Category:Nkotá ya Kongo Kinshasa]]
 
 
-[[de:Lingala]]
 [[als:Lingala]]
-[[en:Lingala language]]
-[[es:lingala]]
+[[am:ሊንጋላ]]
+[[de:Lingala]]
+[[en:Lingala]]
+[[es:Lingala]]
 [[fr:Lingala]]
 [[nl:Lingala]]
 [[fi:Lingala]]
