*Empty MediaWiki Message*

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -1,1 +1,10 @@
+Wikipedia eza [[ensyclopedie]] óyo. Bato batangaka ngo bakomaka ngo.
 
+[[Category:Wikipedia]]
+
+[[af:Wikipedia]]
+[[de:Wikipedia]]
+[[en:Wikipedia]]
+[[es:Wikipedia]]
+[[fr:Wikipédia]]
+[[sw:Wikipedia]]
