*Empty MediaWiki Message*

--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -6,25 +6,25 @@ __NOTOC__
 ==A==
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
-|width=&quot;240&quot;| [[Afghanistan]] || [[Image:COA Afghanistan.png|120px]]
+|width=&quot;240&quot;| [[Afganistani]] || [[Image:COA Afghanistan.png|120px]]
 |-
 | [[Albania]] || [[Image:Albania_state_emblem.png|120px|center]]
 |-
-| [[Algeria]] || [[Image:Algeria_coa.png|120px]]
+| [[Aljeria]] || [[Image:Algeria_coa.png|120px]]
+|-
+| [[Alémani]] || [[Image:Bundesadler.png|120px]]<br><small>the ''[[Bundesadler]]'' (Federal Eagle)</small>
+|-
+| [[Al Mamlaká al-Maghribiya]] || [[Image:morarms22.PNG|120px]]
 |-
 | [[Andorra]] || [[Image:Andorra_coa.png|120px]]
 |-
-| [[Angola]] || [[Image:Coaofangola.jpg|120px]]
+| [[Angóla]] || [[Image:Coaofangola.jpg|120px]]
 |-
 | [[Antigua and Barbuda]] || [[Image:Antigua_and_barbuda_coa.png|120px]]
 |-
 | [[Argentina]] || [[Image:Argentina_coa.png|120px]]
 |-
 | [[Armenia]] || [[Image:Armenia-coa.png|120px]]
-|-
-| [[Australia]] || [[Image:Aust Coat of Arms (large).jpg|120px]]
-|-
-| [[Austria]] || [[Image:Austria coat of arms.png|120px]]
 |-
 | [[Azerbaijan]] || [[Image:Azerbaijan coa.png|120px|]]
 |-
@@ -43,11 +43,11 @@ __NOTOC__
 |-
 | [[Belarus]] || [[Image:Belarus_coa.png|120px]]
 |-
-| [[Belgium]] || [[Image:Belgium_coat_of_arms_small.png|120px]]
+| [[Bɛ́lɛjika]] || [[Image:Belgium_coat_of_arms_small.png|120px]]
 |-
 | [[Belize]] || [[Image:Belize_coa.png|120px]]
 |-
-| [[Benin]] || [[Image:Benin.gif|120px]]
+| [[Bénin]] || [[Image:Benin.gif|120px]]
 |-
 | [[Bhutan]] || [[Image:Bhutan_emblem.png|120px]]
 |-
@@ -73,15 +73,9 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Cambodia]] || [[Image:Coa cambodia.jpg|120px]]
 |-
-| [[Cameroon]] || [[Image:Cameroon coa.jpg|120px|]]
-|-
-| [[Canada]] || [[Image:Bigcancoat.gif|120px]]
-|-
 | [[Cape Verde]] || [[Image:Capeverdearms22.PNG|120px]]
 |-
 | [[Central African Republic]] || [[Image:Centralaf22.PNG|120px]]
-|-
-| [[Chad]] || [[Image:Chad_coa.jpg|120px]]
 |-
 | [[Chile]] || [[Image:Shield_cl.gif|120px]]
 |-
@@ -89,15 +83,7 @@ __NOTOC__
 |-
 | [[Colombia]] || [[Image:Colombia_coa.png|120px]]
 |-
-| [[Comoros]] || [[Image:Comoros_coat_of_arms_small.gif|120px]]
-|-
-| [[Democratic Republic of the Congo]] || [[Image:ArmsDRCbig.gif|120px]]
-|-
-| [[Republic of the Congo]] || [[Image:Congocofarms2.PNG|120px]]
-|-
 | [[Costa Rica]] || [[Image:CostaRica_coa.jpg|120px]]
-|-
-| [[Côte d'Ivoire]] || [[Image:Coa cote d ivory.jpg||120px]]
 |-
 | [[Croatia]] || [[Image:Croatia_coat_small.png|120px]]
 |-
@@ -125,15 +111,9 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[East Timor]] || [[Image:East_timor_coa.png|120px|East Timor COA]]
 |-
-| [[Ecuador]] || [[Image:Ecuador COA.jpg|120px|Ecuador COA]]
+| [[Ekwateli]] || [[Image:Ecuador COA.jpg|120px|Ecuador COA]]
 |-
-| [[Egypt]] || [[Image:Coat of arms of Egypt.png|120px|Golden Eagle - Egypt Coat Of Arms]]
-|-
-| [[El Salvador]] || [[Image:El Salvador coa.gif|120px|El Salvador COA]]
-|-
-| [[Equatorial Guinea]] || [[Image:Equaarms22.PNG|120px|Equatorial Guinea COA]]
-|-
- 
+| [[Ejipti]] || [[Image:Coat of arms of Egypt.png|120px|Golden Eagle - Egypt Coat Of Arms]]
 |-
 | [[Estonia]] || [[Image:Estonia coat-of-arms.jpg|100px|120px|Estonia COA]]
 |-
@@ -156,11 +136,9 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Gabon]] || [[Image:Gabonarms22.PNG|120px]]
 |-
-| [[The Gambia]] || [[Image:Gambiaarms21.PNG|120px]]
+| [[Gambia]] || [[Image:Gambiaarms21.PNG|120px]]
 |-
 | [[Georgia (country)|Georgia]] || [[Image:Georgian_COA.jpg|140px]]
-|-
-| [[Germany]] || [[Image:Bundesadler.png|120px]]<br><small>the ''[[Bundesadler]]'' (Federal Eagle)</small>
 |-
 | [[Ghana]] || [[Image:Ghanaarms23.PNG|120px]]
 |-
@@ -172,9 +150,11 @@ __NOTOC__
 |-
 | [[Guernsey]] || [[Image:Guernsey Coat of Arms.png|120px|Guernsey Coat of Arms]]
 |-
-| [[Guinea]] || [[Image:Guineaarms23.PNG|120px]]
+| [[Gine]] || [[Image:Guineaarms23.PNG|120px]]
 |-
-| [[Guinea-Bissau]] || [[Image:Coaguinea-bissau.jpg|120px|]]
+| [[Gine-Bisau]] || [[Image:Coaguinea-bissau.jpg|120px|]]
+|-
+| [[Gine-Ekwatoliáli]] || [[Image:Equaarms22.PNG|120px|Equatorial Guinea COA]]
 |-
 | [[Guyana]] || [[Image:Guyana_coa.png|120px]]
 |}
@@ -183,6 +163,8 @@ __NOTOC__
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Haiti]] || [[Image:Haiti_coat_of_arms.png|120px]]
+|-
+| [[Holanda]] || [[Image:Arms_netherlands_small.gif|120px|Netherlands Coat of Arms]]
 |-
 | [[Honduras]] || [[Image:Honduras_COA.gif|120px|Honduras COA]]
 |-
@@ -226,14 +208,27 @@ __NOTOC__
 ==K==
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
-|width=&quot;240&quot;| [[Kazakhstan]] || [[image:Embelm_KZ.png|120px]]
- 
+|width=&quot;240&quot;|
+|-
+| [[Kamerun]] || [[Image:Cameroon coa.jpg|120px|]]
+|-
+| [[Kanadá]] || [[Image:Bigcancoat.gif|120px]]
+|-
+| [[Kazakhstan]] || [[image:Embelm_KZ.png|120px]]
 |-
 | [[Kiribati]] || [[Image:Kiribaticoa.gif|120px]]
 |-
 | [[North Korea]] || [[Image:North_korea_coa.png|120px]]
 |-
 | [[South Korea]] || [[Image:South_korea_coa.png|120px]]
+|-
+| [[Komori]] || [[Image:Comoros_coat_of_arms_small.gif|120px]]
+|-
+| [[Kɔ́ngɔ-Brazzaville]] || [[Image:Congocofarms2.PNG|120px]]
+|-
+| [[Kɔ́ngɔ-Kinshasa]] || [[Image:ArmsDRCbig.gif|120px]]
+|-
+| [[Kotdivuar]] || [[Image:Coa cote d ivory.jpg||120px]]
 |-
 | [[Kuwait]] || [[Image:KUW-coat.gif|120px]]
 |-
@@ -253,13 +248,13 @@ __NOTOC__
 |-
 | [[Liberia]] || [[Image:Lib-coa.png|120px]]
 |-
-| [[Libya]] || [[Image:Libyseal.gif|120px|Libya Coat of Arms]]
+| [[Libîya]] || [[Image:Libyseal.gif|120px|Libya Coat of Arms]]
 |-
 | [[Liechtenstein]] || [[Image:Liechtenstein_coa.png|120px]]
 |-
 | [[Lithuania]] || [[Image:Lithuanian_vytis.png|120px]]
 |-
-| [[Luxembourg]] || [[Image:Luxarms.gif|center|120px]]
+| [[Luksambur]] || [[Image:Luxarms.gif|center|120px]]
 |}
 
 ==M==
@@ -281,7 +276,7 @@ __NOTOC__
 |-
 | [[Marshall Islands]] || [[Image:Marshall_Islands_COA.gif|120px|Marshall Islands COA]]
 |-
-| [[Mauritania]] || [[Image:maurarms22.PNG|120px]]
+| [[Moritani]] || [[Image:maurarms22.PNG|120px]]
 |-
 | [[Mauritius]] || [[Image:Mauritius_coa.png|120px]]
 |-
@@ -295,9 +290,7 @@ __NOTOC__
 |-
 | [[Mongolia]] || [[Image:Suld.gif|120px]]
 |-
-| [[Morocco]] || [[Image:morarms22.PNG|120px]]
-|-
-| [[Mozambique]] || [[Image:Mozambique_COA.png|120px|Coat of arms of Mozambique]]
+| [[Mozambiki]] || [[Image:Mozambique_COA.png|120px|Coat of arms of Mozambique]]
 |-
 | [[Myanmar]] || [[Image:Myanmar_COA.gif|120px|Coat of arms of Myanmar]]
 |}
@@ -311,15 +304,13 @@ __NOTOC__
 |-
 | [[Nepal]] || [[Image:Nepal_COA.gif|120px|Nepal COA]]
 |-
-| [[Netherlands]] || [[Image:Arms_netherlands_small.gif|120px|Netherlands Coat of Arms]]
-|-
 | [[New Zealand]] || [[Image:New_zealand_coa.png|120px|New Zealand COA]]
 |-
 | [[Nicaragua]] || [[Image:Nicaragua-coa.jpg|120px]]
 |-
-| [[Niger]] || [[Image:Nigerarms22.PNG|120px]]
+| [[Nijer]] || [[Image:Nigerarms22.PNG|120px]]
 |-
-| [[Nigeria]] || [[Image:Nigeriaarms22.PNG|120px]]
+| [[Nijéria]] || [[Image:Nigeriaarms22.PNG|120px]]
 |-
 | [[Norway]] || [[Image:Norway_coa.png|center|120px]]
 |}
@@ -327,7 +318,13 @@ __NOTOC__
 ==O==
 
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
-|width=&quot;240&quot;| [[Oman]] || [[Image:Khanjar.gif|120px]]
+|width=&quot;240&quot;| [[Omani]] || [[Image:Khanjar.gif|120px]]
+|-
+| [[Ostralía]] || [[Image:Aust Coat of Arms (large).jpg|120px]]
+|-
+| [[Otrishi]] || [[Image:Austria coat of arms.png|120px]]
+|-
+
 |}
 
 ==P==
@@ -349,7 +346,7 @@ __NOTOC__
 |-
 | [[Poland]] || [[Image:Herb Polski.png|120px|Coat of Arms of Poland]]
 |-
-| [[Portugal]] || [[Image:Portugal_coa.png|120px]]
+| [[Pulutugal]] || [[Image:Portugal_coa.png|120px]]
 
 |}
 
@@ -378,23 +375,27 @@ __NOTOC__
 |-
 | [[Saint Vincent and the Grenadines]] || [[Image:Svincent22.PNG|center|75px]]
 |-
+| [[San Salvador]] || [[Image:El Salvador coa.gif|120px|El Salvador COA]] 
+|-
 | [[Samoa]] || [[Image:Westasmarms22.PNG|120px]]
 |-
 | [[San Marino]] || [[Image:Smarino.jpg|120px]]
 |-
-| [[São Tomé and Príncipe]] || [[Image:Saoprinarms22.PNG|120px]]
+| [[Sǎo Tomé na Principe]] || [[Image:Saoprinarms22.PNG|120px]]
 |-
 | [[Saudi Arabia]] || [[Image:Saudi coa.jpg|120px]] 
 |-
 | [[Scotland]] || [[Image:Scottish royal coat of arms.png|120px]] 
 |-
-| [[Senegal]] || [[Image:Senegal_coa.png|120px]]
+| [[Sénégal]] || [[Image:Senegal_coa.png|120px]]
 |-
 | [[Serbia and Montenegro]] || [[Image:Coat of arms of Serbia and Montenegro.png|120px|Serbia and Montenegro Caot of Arms]]
 |-
-| [[Seychelles]] || [[Image:Seychelles_coa.png|120px]]
+| [[Seyshel]] || [[Image:Seychelles_coa.png|120px]]
 |-
 | [[Sierra Leone]] || [[Image:SLECOA.gif|120px|Sierra Leone Coat of Arms]]
+|-
+| [[Sidafrika]] || [[Image:Za-coa.gif]]
 |-
 | [[Singapore]] || [[Image:Symbol_crest.png|120px]]
 |-
@@ -404,14 +405,11 @@ __NOTOC__
 |-
 | [[Solomon Islands]] || [[Image:Solomon_Islands_coat_of_arms_small.jpg|120px]]
 |-
- |-
-| [[South Africa]] || [[Image:Za-coa.gif]]
-|-
 | [[Spain]] || [[Image:Spain_coa.png|120px]]
 |-
 | [[Sri Lanka]] || [[Image:Sri_lanka_coa.png|120px]]
 |-
-| [[Sudan]] || [[Image:Sudan_coa.png|120px]]
+| [[Sudani]] || [[Image:Sudan_coa.png|120px]]
 |-
 | [[Suriname]] || [[Image:Suriname_coa.png|120px]]
 |-
@@ -419,7 +417,7 @@ __NOTOC__
 |-
 | [[Sweden]] || [[Image:Sweden_arms_small.gif|120px]]
 |-
-| [[Switzerland]] || [[Image:Switzerland_CoA.png|120px]]
+| [[Swisi]] || [[Image:Switzerland_CoA.png|120px]]
 |-
 | [[Syria]] || [[Image:Syrlogo.jpg|120px]]
 |}
@@ -438,6 +436,8 @@ __NOTOC__
 | [[Tonga]] || [[Image:Tongaarms22.PNG|120px]]
 |-
 | [[Trinidad and Tobago]] || [[Image:Coat_of_arms_Trinidad_and_Tobago.jpg|120px]]
+|-
+| [[Tshad]] || [[Image:Chad_coa.jpg|120px]]
 |-
 | [[Tunisia]] || [[Image:Armes_tunisie.jpg|120px|Tunisia Coat of Arms]]
 |-
@@ -473,7 +473,7 @@ __NOTOC__
 |-
 | [[Venezuela]] || [[Image:Venezuela_coa.png|120px]]
 |-
-| [[Vietnam]] || [[Image:Viet-coa.PNG|120px]]
+| [[Vietnami]] || [[Image:Viet-coa.PNG|120px]]
 |-
 |}
 
