*Empty MediaWiki Message*

--- a/Radio_Okapi.mw
+++ b/Radio_Okapi.mw
@@ -2,7 +2,7 @@
 
 {{ndámbo}}
 
-'''Radio Okapi''' ezalí radio na [[MONUC]].
+'''Radio Okapi''' ezalí radio na [[MONUC]] o Ekólo [[Kɔ́ngɔ-Kinshasa]].
 
 ==Tála mpé==
 === Mankásá o libándá ===
