*Empty MediaWiki Message*

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -151,6 +151,7 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 {{Ndambo}}
 [[Category:Lokótá]]
 
+[[als:Sprache]]
 [[de:Sprache]]
 [[fr:langue]]
 [[en:language]]
