*Empty MediaWiki Message*

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -5,22 +5,13 @@
 
 '''Kikɔ́ngɔ''' ezali [[lokótá]] na bato ya [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ Demokrati]], [[Kɔ́ngɔ-Brazaville|Kɔ́ngɔ Brazavili]] mpe na [[Angola]]. 
 
+==Tálá mpé ==
+* [[Lingála]]
 
-== (liens) ==
+=== Nkásá o libándá ===
 * http://www.congopage.com/phpBB/viewforum.php?f=33
 * http://www.ceeba.at/#Etudes%20Linguistiques Institut de culture africaine de Bandundu (lifalansé)
 
-----
-Comment améliorer un article sur une langue?
-* classification linguistique
-* où est-ce qu'on la parle?
-* spécialités grammaticales
-* histoire linguistique
-* sons
-* bibliographie
-
->> voir come exemple: http://en.wikipedia.org/wiki/Lingala_language 
-----
 [[Category:Lokótá]]
 [[Category:bandambo ya Nkota ya Nijer-Kongo]]
 [[Category:Nkotá ya Kongo Kinshasa]]
