*Empty MediaWiki Message*

--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -14,6 +14,7 @@
 [[Category:Bɛndɛ́lɛ ya bisé|Kɔ́ngɔ Demokratiki, Repubiliki ya]]
 
 [[de:Flagge der Demokratischen Republik Kongo]]
+[[es:Bandera de la República Democrática del Congo]]
 [[he:&#1491;&#1490;&#1500; &#1492;&#1512;&#1508;&#1493;&#1489;&#1500;&#1497;&#1511;&#1492; &#1492;&#1491;&#1502;&#1493;&#1511;&#1512;&#1496;&#1497;&#1514; &#1513;&#1500; &#1511;&#1493;&#1504;&#1490;&#1493;]]
 [[it:Bandiera della Repubblica Democratica del Congo]]
 [[sv:Demokratiska republiken Kongos flagga]]
