--- a/Justine_Kitubu_Kamanda.mw
+++ b/Justine_Kitubu_Kamanda.mw
@@ -1,5 +1,5 @@
 '''Justine Kitubu Kamanda''' azali [[bourgemestre]] ya [[La Gombe (Kinshasa)|La Gombe]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
-[[Category:Moto wa politiki ya Kisasa]]
-[[category:Kisasa]]
+[[Category:Moto wa politiki ya Kisásá]]
+[[category:Kisásá]]
