--- a/Roger_Ngamika_Mvumu.mw
+++ b/Roger_Ngamika_Mvumu.mw
@@ -1,4 +1,4 @@
-'''Roger Ngamika Mvumu''' azali [[bourgemestre]] ya [[Bandalungwa]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
+'''Roger Ngamika Mvumu''' azali [[bourgemestre]] ya [[Barumbu]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
 [[Category:Moto wa politiki ya Kisásá]]
