--- a/Lovodi_Kale.mw
+++ b/Lovodi_Kale.mw
@@ -1,4 +1,4 @@
-'''Lovodi Kale''' azali [[bourgemestre]] ya [[Maluku]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
+'''Lovodi Kale''' azali [[bourgemestre]] ya [[Maluku (Congo)|Maluku]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
 [[Category:Moto wa politiki ya Kisásá]]
