--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -1,7 +1,7 @@
 {{ndambo}}
 
 [[image:preservatif1.jpg|thumb|Ekopikesa]]
-[[category:boyebi mosala ya mónganga]]
+[[category:Mónganga]]
 [[category:sida]]
 [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
 
