--- a/Sidá.mw
+++ b/Sidá.mw
@@ -1,5 +1,5 @@
 {{ndámbo}}
-[[category:boyebi mosala ya mónganga]]
+[[category:Mónganga]]
 [[category:bokɔnɔ]]
 [[category:sida]]
 [[Category:maladi]]
