--- a/Ekopekisa_(Ndenge).mw
+++ b/Ekopekisa_(Ndenge).mw
@@ -1,6 +1,6 @@
 {{ndambo}}
 [[image:CondomUse.jpg|thumb|150px|left|Ekopikesa]]
-[[category:Mónganga]]
+[[category:Móngana]]
 [[category:sida]]
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''[[ekopekisa]]''' ngenge ya [[sida]]. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
