*Empty MediaWiki Message*

--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -26,7 +26,7 @@
 
 
 
-<!-- Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre. -->
+<!-- Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre (langues parlés en Afrique). -->
 [[ak:]] [[fr:]] [[en:]] [[pt:]] [[af:]] [[sw:]] [[kg:]] [[simple:]] [[es:]] [[eo:]] [[wo:]]
 
 __NOTOC__
