--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -1,4 +1,4 @@
----- '''Traducteur français - lingala recherché!''' [[user:Bombo|contact]]
+{{9yanuari}}
 <div style="position:relative;visibility:hidden">---Sidenote START---</div>
 
 {{Lonkásá ya libosó/Mbɔ́tɛ}}
@@ -26,7 +26,7 @@
 
 
 
-<!-- Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre (langues parlés en Afrique). -->
+<!-- Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre. -->
 [[ak:]] [[fr:]] [[en:]] [[pt:]] [[af:]] [[sw:]] [[kg:]] [[simple:]] [[es:]] [[eo:]] [[wo:]]
 
 __NOTOC__
