engumba mokonzi → mbóka-mokonzi

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -18,7 +18,7 @@
 | [[Nkótá ya Ekólo]]  
 | [[lingála]], [[kiswahili]],<br />[[ciluba]], [[kikɔ́ngɔ]]
 |-----
-| [[Engumba mokonzi]] || [[Kinshasa]]
+| [[Mbóka-mokonzi]] || [[Kinshasa]]
 |-----
 | [[Molɔngɔ ya Bakambi ekolo Kɔ́ngɔ-Kinshasa|Mokambi ekolo]] || [[Joseph Kabila]]
 |-----
