--- a/Kinsásá.mw
+++ b/Kinsásá.mw
@@ -1,18 +1,20 @@
 <div style="float:right">[[image:DCongoKinshasa.png]]</div>
 
-Engumba '''Kinshasa''' - ekoki kotangemene ''Kisásá'' to mpe ''Kíncása'' - (oyo eyebenaki kala o nkombo '''[[Leopoldville]]''') ezali '''[[Engumba mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kongo Demokratiki]]''' to mpe '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezali mpe [[etuka|provinsi]] ya ekolo ena. Ezali engumba monene, na milioni 8 ya batu (est.). Elongo na nionso oyo, Kinshasa ezali engumba mibale na bingumba nionso ya mokili, na elobeli [[lifalansé]], na sima ya Engumba '''[[Pari]]''' ([[Falansia]]), mpe ezali okati ya bingumba minene koleka ya [[Afrika]] o sé ya [[Sahara]]. 
+Mbóka tô engúmba '''Kinshasa''' - ekokí kotangemene ''Kisásá'' tǒ mpé ''Kincásá'' - (óyo eyebenákí kala o nkómbó '''[[Léopoldville]]''') ezalí '''[[mbóka-mokonzi]]''' ya '''[[Kɔ́ngɔ-Kinshasa|Repubiliki ya Kɔ́ngɔ Demokratiki]]''' tǒ̂ mpé '''[[Kɔ́ngɔ-Kinshasa]]'''. Ezalí mpé [[etuka]] (''province'') ya ekólo êná. Ezalí engúmba monɛ́nɛ, na milioni 8 ya bato (est.). Elongo na nyɔ́nsɔ óyo, Kinshasa ezalí engúmba ya míbalé na bingumba nyɔ́nsɔ ya mokili, na elobelí [[lifalansé]], na sima ya engúmba '''[[Pari]]''' ([[Falansia]]), mpé ezalí o káti ya bingúmba minɛ́nɛ koleka ya [[Afrika]] o nsé ya [[Sahara]]. 
 
-==Jyografi==
+== Jyografi ==
 [[Image:Kinshasa 2001.jpg|thumb|290px|Kinshasa, Kongo, 2001]]
 [[Image:Kinshasa.jpg|thumb|290px|Esika ya bapark ya bulevale ya 30 Yuni, Kinshasa, Kongo, Avrili 2003]]
 
+<!--
 Kinshasa is a city of sharp contrasts, with posh residential and commercial areas, two universities, and sprawling slums coexisting side by side. 
+-->
 
-Ekútání na mabele o loboko-ya-mwasi ya '''Ebale ya [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]]'''. Na yango etalani pene-pene mpeza na '''[[Brazzaville]]''', [[Engumba-mokonzi|engumba-mokonzi]] ya '''[[Repubiliki ya Kɔ́ngɔ]]''' to mpe '''[[Kɔ́ngɔ-Brazzaville]]'''. Kinshasa ekútání na 4&deg;16' Sud, 15&deg;17' Este (-4.2667, 15.28333).
+Ekútání na mabele o loboko-ya-mwǎsí ya '''Ebale ya [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]]'''. Na yangó etalaní pɛnɛ-pɛnɛ mpenza na '''[[Brazzaville]]''', [[mbóka-mokonzi]] ya '''[[Repubiliki ya Kɔ́ngɔ]]''' tǒ mpé '''[[Kɔ́ngɔ-Brazzaville]]'''. Kinshasa ekútání na 4&deg;16' Sud, 15&deg;17' Este (-4.2667, 15.28333).
 
-Bisika minene ya ena engumba: [[Cité de l'OUA]], ndaku ya '''[[Bulamatari ya Kɔ́ngɔ-Kinshasa]]'''; [[Komini ya Matonge]], oyo eyebani mokili mobimba pona [[malɛki-butu]] na yango; [[komini ya Gombe]].  Engumba oyo ezali na ba buatu ya ebale to mpe [[ferry|baferry]] na [[port]] ya [[Beach Ngobila]] mpo na kokende Brazzaville na [[Bangui]], na [[nzela-masinu]] tɛ́ na [[Matadi]], elongo na [[Aleopori ya N'Djili|Aleopori]] ya [[N'djili]].
+Bisíká minɛ́nɛ ya êná engúmba: [[Cité de l'OUA]], ndáko ya '''[[Bulamatari ya Kɔ́ngɔ-Kinshasa]]'''; [[Komini ya Matonge]], óyo eyebaní mokili mobimba mpɔ̂ na [[malɛki-butu]] na yangó; [[komini ya Gombe]].  Engúmba óyo ezalí na [[bwǎto|mǎto]] ya ebale tǒ mpé [[ferry|baferry]] na [[esɛ́mɛlɔ]] ya [[Beach Ngobila]] mpɔ̂ na kokɛndɛ Brazzaville na [[Bangi]], na [[nzéla-masinu]] ’te na [[Matadi]], elongo na [[Aleopori ya N'Djili|Aleopori]] ya [[N’djili]].
 
-Biloko minene oyo emonanaka mingi ezali [[Buludingi ya SOZACOM]], Hotel Inter-Continental na [[Hotel Memling]], [[Zando monene]] ya Kinshasa, '''[[Mizé ya Kinshasa]]''' na [[Académie des Beaux-Arts]].  [[Bulevale ya 30 Juin]] nde ekangasi biteni nionso ya ena engumba.
+Bilóko minɛ́nɛ óyo emonanaka míngi ezalí [[Buludingi ya SOZACOM]], Hotel Inter-Continental na [[Hotel Memling]], [[Zando monene]] ya Kinshasa, '''[[Mizé ya Kinshasa]]''' na [[Académie des Beaux-Arts]].  [[Bulevale ya 30 Juin]] ndé ekangasí biténi nyɔ́nsɔ ya êná engúmba.
 
 ==Historia==
 <!--
@@ -29,7 +31,7 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 ==Media==
 <!--Kinshasa is home to a large number of radio and TV stations. The National TV is housed in the city. Its 2 channels reach more or less the entire country. In additional to these stations, there are nearly a dozen terrestrial stations reaching the environs of the city, and sometimes a bit beyond.-->
 
-== Makasa-web olibanda Wikipedia ==
+== Nkásá-web o libándá Wikipedia ==
 *{{en icon}} [http://www.boxing-memorabilia.com/aliforeman2.htm Rumble In The Jungle - Muhammad Ali Kinshasa, 1974]
 *{{fr icon}} [http://www.monuc.org/downloads/KINSHASA_IKONOS_SKETCH100.pdf Carte détaillée de Kinshasa]
 *{{fr icon}} [http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] (2001)
@@ -39,7 +41,7 @@ Kinshasa suffered greatly due to Mobutu's excesses, mass corruption, nepotism an
 *{{fr icon}} [http://www.katembo.be/Kin2005/index.htm Photos de Kinshasa 2005]
 *{{fr icon}} [http://www.stiopka.com/Leo/photos_leo.html Photos de Kinshasa / Léopoldville]
 
-==Tala mpe==
+==Tálá mpé==
 *[[Repubiliki ya Kɔ́ngɔ Demokratiki]]
 
 [[Category:Bingumba mikonzi ya Afrika]]
