--- a/Politíki.mw
+++ b/Politíki.mw
@@ -3,7 +3,7 @@
 
 '''Politiki''' ezalí bwányá ya koyángela [[likambo|makambo]] ma ekolo lokóla mibeko mizalí kotinda; kobɔngisa [[bomɔi]] ya [[moto|bato]], bizalela ya bangó; kotambwisa misala mia ekolo, mpe koyokana na bikolo bisusu; ezalí sɔlɔ ndimbola ya politiki.
 
-Mwa likebisi litali liloba ''politiki''. Soki toyoki liloba «politiki» to «kosala politiki», tokanisaka nini? Tokanisaka: ''koyiba, kokosa, kosala mabe, kosala mayele''... Kasi politiki ya solo ezali bongo te. Liloba politiki euti na [[ligresi]] (lokótá la [[Gresi]]): ''Polis'' elingi koloba [[mboka]], [[engumba]], [[ekolo]], [[esé]]. Politiki ezali mosala to ntoki ya boyangeli mboka to ekolo. Ezali bwanya to mayele ma koyeba boniboni bayangela mokili mwa bato, boniboni bakamba bato ba ekolo na ndenge elingi kosepelisa bato banso.
+Mwa likebisi litali liloba ''politiki''. Soki toyoki liloba «politiki» to «kosala politiki», tokanisaka nini? Tokanisaka: ''koyiba, kokosa, kosala mabe, kosala mayele''... Kasi politiki ya solo ezali bongo te. Liloba politiki euti na [[ligresi]] (lokótá la [[Gresi]]): ''Polis'' elingi koloba [[mboka]], [[engumba]], [[ekólo]], [[esé]]. Politiki ezali mosala to ntoki ya boyangeli mboka to ekolo. Ezali bwanya to mayele ma koyeba boniboni bayangela mokili mwa bato, boniboni bakamba bato ba ekolo na ndenge elingi kosepelisa bato banso.
 
 Yango wana, na mosala mwa politiki, moto akoluka malamu mpo ya ye moko mpenza te, mpo ya libota lya ye te, akoluka se bolamu bwa batu banso lisanga.
 
