--- a/Mbóka-mokonzi.mw
+++ b/Mbóka-mokonzi.mw
@@ -1,15 +1,14 @@
-'''''Engumba-mokonzi''''' ya ekolo moko, ezali engumba esika ekutanemi bulamatari ya [[ekolo]] ena. 
+'''Mbóka-mokonzi''' tǒ '''Engúmba-mokonzi''' ya ekólo mɔ̌kɔ́, ezalí engúmba esíká ekutanemí bulamatari ya [[ekólo]] êná. 
 
-i.e: ''[[Kinshasa]]'' ezali engumba-mokonzi ya ''[[Kɔ́ngɔ-Kinshasa]]''.
+Ndakisa : ''[[Kinshasa]]'' ezalí mbóka-mokonzi ya ''[[Kɔ́ngɔ-Kinshasa]]''.
 
-Ekoki mpe kosalema tee ba provinsi, to biteni ya ndenge na ndenge okati ya ekolo moko, bizala na bingumba mikonzi na bango.
+Ekoki mpé kosalema téé [[mbánzá]] yíké, tǒ biténi ya ndéngé na ndéngé o káti ya ekólo mɔ̌kɔ́, bizala na bingúmba-mikonzi na bangó.
 
-i.e: [[Durban]] ezali engumba-mokonzi ya [[Kwazulu-Natal]], o ekolo ya Afrique du Sud.
+Ndakisa : [[Durban]] ezalí engúmba-mokonzí ya [[Kwazulu-Natal]], o ekólo ya Afrique du Sud.
 
-[[category:Leta]]
-
+[[category:Lɛ́ta]]
 [[en:capital city]]
 [[fr:capitale]]
 [[es:capital]]
 
-{{ndambo}}
+{{ndámbo}}
