--- a/Lokótá_ya_Lɛ́ta.mw
+++ b/Lokótá_ya_Lɛ́ta.mw
@@ -1,9 +1,10 @@
-'''Lokótá ya Leta''' ezali lokóta oyo leta (to mpe [[bulamatari]]) ya [[esé]] (to mpe [[ekolo]]) moko, aponi pona kosalela na ba buku, mpe na malobi makonzi naye. Ezalaka mpe mingni-mingi lokótá oyo esalelamaka pona kotangisa na kelasi ya bana-ekolo ina.
+'''Lokótá ya Lɛ́ta''' ezalí lokótá óyo Lɛ́ta (tǒ mpé [[bulamatari]]) ya [[esé]], tǒ mpé [[ekólo]]) mɔ̌kɔ́, aponí mpɔ̂ na kosalela na babúku, mpé na malobi makonzi na ye. Ezalaka mpé míngi-míngi lokótá óyo esalelamaka mpɔ̌ na kotangisa na kelasi ya bǎna-ekólo êná.
 
-(i.e: [[lifalansé]] ezali moko nakati ya nkotá mibale ya leta ya [[Kanada]])
+(Ndakisa : [[lifalansé]] ezalí mɔ̌kɔ́ na káti ya nkótá míbalé ya lɛ́ta ya [[Kanadá]])
 
-[[Molongo ya nkotá ya leta mokili]]
+[[Molɔngɔ́ ya nkótá ya lɛ́ta mokili]]
 
-[[Category:Nkotá ya mokili]]
+
+[[Category:Nkótá ya mokili]]
 
 [[fr:langue officielle]]
