--- a/Lingála.mw
+++ b/Lingála.mw
@@ -8,27 +8,79 @@
 === [[Moleli|Baleli]] ===
 {| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
 !
-! style="font-size: x-small;" | [[Moleli na libóso|Libóso]]
+! style="font-size: x-small;" | [[Moleli na libosó|Libosó]]
 ! style="font-size: x-small;" | [[Moleli na nsima|Nsima]]
 |-
-! style="text-align: right;font-size: x-small;" | 
+! style="text-align: right;font-size: x-small;" | Efúngámá
 |style="font-size: larger;"| i
 |style="font-size: larger;"| u
 |-
-! style="text-align: right;font-size: x-small;" | 
+! style="text-align: right;font-size: x-small;" | Efúngámá mbúka
 |style="font-size: larger;"| e
 |style="font-size: larger;"| o
 |-
-! style="text-align: right;font-size: x-small;" | 
+! style="text-align: right;font-size: x-small;" | Efúngólá mbúka
 |style="font-size: larger;"| &#603;
 |style="font-size: larger;"| &#596;
 |-
-! style="text-align: right;font-size: x-small;" | 
+! style="text-align: right;font-size: x-small;" | Efúngólá
 |style="font-size: larger;"| a
 | &nbsp;
 |}
 
 === [[Molelisi|Balelisi]] ===
+
+{| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
+|- style="font-size: x-small;vertical-align:top;"
+!
+! colspan=2 | [[Consonne bilabiale|Bilabial]]
+! colspan=2 | [[Consonne labiodentale|Labio-<br/>dental]]]
+! colspan=2 | [[Consonne alvéolaire|Alvéolaire]]
+! colspan=2 | [[Consonne post-alvéolaire|Post-<br/>alvéolaire]]
+! colspan=2 | [[Consonne palatale|Palatal]]
+! colspan=2 | [[Consonne vélaire|Vélaire]]
+|-
+! style="font-size:x-small" | Etútáná
+| p || b
+| colspan=2 | &nbsp;
+| t || d
+| colspan=2 | &nbsp;
+| &nbsp; || &nbsp;
+| k || ɡ
+|-
+! style="font-size:x-small" | Na zɔlɔ
+| colspan="2" | m
+| colspan="2" | &nbsp;
+| colspan="2" | n
+| colspan="2" | &nbsp;
+| colspan="2" | ɲ
+| colspan="2" | ŋ
+|-
+! style="font-size:x-small" | Enyíkámá
+| &nbsp; || &nbsp;
+| f || v
+| s || z
+| ʃ || (ʒ)
+| &nbsp; || &nbsp;
+| &nbsp; || &nbsp;
+|-
+! style="font-size:x-small" | Ya ndámbo
+| colspan=2 | &nbsp;
+| colspan=2 | &nbsp;
+| colspan=2 | &nbsp;
+| colspan=2 | &nbsp;
+| colspan=2 | j
+| colspan=2 | &nbsp;
+|-
+! style="font-size:x-small" | Ya mái
+| colspan=4 style="background:#ccc" | &nbsp;
+| l || r
+| colspan=2 | &nbsp;
+| colspan=2 | &nbsp;
+| colspan=2 | &nbsp;
+|-
+|}
+
 
 ==Mankásá o libándá==
 * {{fr}} [http://www.com-nature.com/phorum/list.php3?f=14 Archive du Forum Congopage : Le Lingala]
