--- a/Lingála.mw
+++ b/Lingála.mw
@@ -5,7 +5,7 @@
 
 '''Lingála''' ezalí [[lokótá]] ya bato ba [[Kɔ́ngɔ-Brazzaville]] mpé ba [[Kɔ́ngɔ-Kinshasa]].
 
-=== [[Moleli|Baleli]] ===
+=== [[Moleli|Mileli]] ===
 {| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
 !
 ! style="font-size: x-small;" | [[Moleli na libosó|Libosó]]
@@ -28,7 +28,7 @@
 | &nbsp;
 |}
 
-=== [[Molelisi|Balelisi]] ===
+=== [[Molelisi|Milelisi]] ===
 
 {| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
 |- style="font-size: x-small;vertical-align:top;"
