*Empty MediaWiki Message*

--- a/Lingála.mw
+++ b/Lingála.mw
@@ -33,12 +33,12 @@
 {| border=1 cellspacing=0 cellpadding=2 style="text-align:center; border-collapse:collapse;"
 |- style="font-size: x-small;vertical-align:top;"
 !
-! colspan=2 | [[Consonne bilabiale|Bilabial]]
-! colspan=2 | [[Consonne labiodentale|Labio-<br/>dental]]]
-! colspan=2 | [[Consonne alvéolaire|Alvéolaire]]
-! colspan=2 | [[Consonne post-alvéolaire|Post-<br/>alvéolaire]]
-! colspan=2 | [[Consonne palatale|Palatal]]
-! colspan=2 | [[Consonne vélaire|Vélaire]]
+! colspan=2 | Mbébo
+! colspan=2 | Mbébo<br/> na mǐno
+! colspan=2 | Lolémo<br/> na mǐno
+! colspan=2 | Lolémo<br/> na mǐno<br/> o nsima
+! colspan=2 | Lolémo<br/> na edáda
+! colspan=2 | ''Vélaire''
 |-
 ! style="font-size:x-small" | Etútáná
 | p || b
