*Empty MediaWiki Message*

--- a/Moto.mw
+++ b/Moto.mw
@@ -1,5 +1,5 @@
 {{ndámbo}}
-'''Moto''': [[mobáli]] na [[mwásí]].
+'''Moto''' azalí na [[bomoto]], azalí o kelasí [[nyama ya mabɛ́lɛ]], ya kelasí ''[[Homo]]''.
 
 [[Image:Human.png|thumb|right|150px|''[[mobáli]] na [[mwásí]]'']]
 
