--- a/Moto.mw
+++ b/Moto.mw
@@ -3,6 +3,7 @@
 
 [[Image:Human.png|thumb|right|150px|''[[mobáli]] na [[mwásí]]'']]
 
+[[Category:Moto]]
 [[en:Human]]
 [[ar:&#1575;&#1606;&#1587;&#1575;&#1606;]]
 [[ast:Homo sapiens]]
