--- a/Nyama_ya_mabɛ́lɛ.mw
+++ b/Nyama_ya_mabɛ́lɛ.mw
@@ -1,5 +1,6 @@
 {{ndámbo}}
 '''Nyama ya mabɛ́lɛ''' izalí kelási ya [[nyama]] óyo izalí na [[mabɛ́lɛ]].
 
+[[Category:Nyama ya mabɛ́lɛ]]
 [[fr:Mammifère]]
 [[en:Mammal]]
