*Empty MediaWiki Message*

--- a/Nyama_ya_mabɛ́lɛ.mw
+++ b/Nyama_ya_mabɛ́lɛ.mw
@@ -1,5 +1,5 @@
 {{ndámbo}}
-'''Nyama ya mabɛ́lɛ''' izalí kelási ya [[nyama]] óyo izalí na [[mabɛ́lɛ]].
+'''Nyama ya mabɛ́lɛ''' izalí kelási ya [[nyama]] óyo izalí na [[libɛ́lɛ|mabɛ́lɛ]].
 
 [[Category:Nyama ya mabɛ́lɛ]]
 [[fr:Mammifère]]
