--- a/Libɛ́lɛ.mw
+++ b/Libɛ́lɛ.mw
@@ -1,4 +1,5 @@
 {{ndámbo}}
+[[Image:Dissected lactating breast gray1172.png|thumb|Libɛ́lɛ ya mwǎsí]]
 '''Libɛ́lɛ''' ezalí eténi ya [[ntólo]] ezalaka na [[nzóto]] ya [[mwǎsí]] mwa [[moto]] mpé mwasí ya [[nyama ya mabɛ́lɛ]]. Mabɛ́lɛ mazalaka mábalé o ntólo epái ya mwǎsí mwa moto. 
 
 [[en:Mammary gland]]
