--- a/Libɛ́lɛ.mw
+++ b/Libɛ́lɛ.mw
@@ -2,5 +2,5 @@
 [[Image:Dissected lactating breast gray1172.png|thumb|Libɛ́lɛ ya mwǎsí]]
 '''Libɛ́lɛ''' ezalí eténi ya [[ntólo]] ezalaka na [[nzóto]] ya [[mwǎsí]] mwa [[moto]] mpé mwasí ya [[nyama ya mabɛ́lɛ]]. Mabɛ́lɛ mazalaka mábalé o ntólo epái ya mwǎsí mwa moto. 
 
-[[Category:Nzóto]]
+[[Category:Eténi ya nzóto]]
 [[en:Mammary gland]]
