*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -2,7 +2,7 @@
 nkómbó               = Swisi |
 nkómbó_na_lokóta     = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft<br>Switzerland|
 image_flag           = Switzerland_flag_300.png |
-image_coat           = Switzerland coat of arms.png |
+image_coat           = Coat of Arms of Switzerland.svg |
 image_map            = LocationSwitzerland.png |
 mokáno               = (none)|
 loyémbo              = [[Swiss Psalm]] |
@@ -12,7 +12,7 @@ engúmba_mokonzi      = [[Bern]] (engúmba mokonzi fedelali) |latd=46|latm=57|la
 engúmba_monɛ́nɛ      = [[Zurich]] |
 government_type      = [[Ekólo Fedelali]] |
 leader_titles        = [[Swiss Federal Council|Federal Council]]|
-leader_names         = <!-- ordered by seniority -->[[Moritz Leuenberger]] <small>([[President of the Confederation (Switzerland)|Vice Pres. 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
+leader_names         = <!-- ordered by seniority -->[[Moritz Leuenberger]] <br/><small>([[President of the Confederation (Switzerland)|Vice Pres. 2005]])</small><br>[[Pascal Couchepin]]<br>[[Joseph Deiss]]<br>[[Samuel Schmid]] <small>([[President of the Confederation (Switzerland)|Pres. 2005]])</small><br>[[Micheline Calmy-Rey]]<br>[[Christoph Blocher]]<br>[[Hans-Rudolf Merz]]|
 area                 = 41,285|area_rank=132nd|area_magnitude=1 E10|percent_water=4.2|
 population_estimate  = 7,399,100|population_estimate_year=2003|population_estimate_rank=92nd |
 population_density   = 181|population_density_rank=44th |
