*Empty MediaWiki Message*

--- a/Swisi.mw
+++ b/Swisi.mw
@@ -1,4 +1,4 @@
-{{infobox_country|
+{{Infobox Esé|
 nkómbó               = Swisi |
 nkómbó_na_lokóta     = Confoederatio Helvetica<br>Confédération suisse<br>Confederazione Svizzera<br>Confederaziun svizra<br>Schweizerische Eidgenossenschaft<br>Switzerland|
 image_flag           = Switzerland_flag_300.png |
