*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -1,6 +1,6 @@
 {{bokokani}}
 
-{{Infobox_country|
+{{Infobox Esé|
 nkómbó_na_lokóta = United Kingdom of Great Britain and Northern Ireland |
 nkómbó = Ingɛlɛ́tɛlɛ |
 image_flag = uk flag large.png |
