*Empty MediaWiki Message*

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -1,5 +1,7 @@
 {{bokokani}}
 
+'''Ingɛlɛ́tɛlɛ''' ezalí Lisangá ya Mani ya Britania Monɛ́nɛ mpé Irlandí ya Likólo. Mani ya Ingɛlɛ́tɛlɛ ezalí [[Elizabeth II]]. Mbóka-mokonzi ezalí [[Londoni]].
+
 {{Infobox Esé|
 nkómbó_na_lokóta = United Kingdom of Great Britain and Northern Ireland |
 nkómbó = Ingɛlɛ́tɛlɛ |
@@ -9,7 +11,7 @@ image_map = LocationUnitedKingdom.png |
 mokáno = [[Dieu et mon droit]] (Royal motto)<br>([[Lifalansé]]: Nzámbe ndé likoki na ngáí)''<sup>2</sup></small> |
 loyémbo = [[God Save the Queen]]<sup>3</sup> |
 nkótá_ya_lɛ́ta = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛ́sa]] ''[[de facto]]'' <sup>4</sup> |
-engúmba_mokonzi = [[Londoni]] |
+mbóka-mokonzi = [[Londoni]] |
 latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
 engúmba_monɛ́nɛ = [[Londoni]] |
 government_type = [[Constitutional monarchy]] |
