--- a/Namibia.mw
+++ b/Namibia.mw
@@ -1,14 +1,14 @@
-{{Infobox_country|
-common_name 		= Namibia |
-native_name 		= Republic of Namibia<br><br><br>|
-image_flag 		= Namibia flag medium.png |
+{{Infobox Esé|
+nkómbó 			= Namibia |
+nkómbó_na_lokóta	= Republic of Namibia<br><br><br>|
+image_flag 		= Flag_of_Namibia.svg |
 image_coat 		= Namibia_coa.png |
 image_map 		= LocationNamibia.png |
 national_motto 		= Unity, Liberty, Justice<br>(Lingála: bɔ́kɔ́, bonsɔ́mi, bosémbo)|
 national_anthem 	= [[Namibia, Land of the Brave]] |
-official_languages 	= [[Lingɛlɛsi]]|
-Nkótá nasyonale         = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
-capital 		= [[Windhoek]] (lialémani: Windhuk) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
+nkótá_ya_lɛ́ta 		= [[Lingɛlɛsi]]|
+nkótá_ya_ekólo          = [[Ovambo]], [[Afrikaans]], [[Lialemani]]|
+mbóka-mokonzi 		= [[Windhoek]] (lialémani: Windhuk) |latd=46|latm=57|latNS=N|longd=7|longm=27|longEW=E|
 largest_city 		= [[Windhoek]] (lialémani: Windhuk) |
 government_type 	= [[Republiki]] |
 leader_titles 		= |
@@ -40,3 +40,5 @@ footnotes 	= |
 {{ndámbo}}
 [[Category:Afrika]]
 [[Category:Bisé ya Afrika]]
+[[en:Namibia]]
+[[fr:Namibie]]
