--- a/Libɛ́lɛ.mw
+++ b/Libɛ́lɛ.mw
@@ -3,4 +3,16 @@
 '''Libɛ́lɛ''' ezalí eténi ya [[ntólo]] ezalaka na [[nzóto]] ya [[mwǎsí]] mwa [[moto]] mpé mwasí ya [[nyama ya mabɛ́lɛ]]. Mabɛ́lɛ mazalaka mábalé o ntólo epái ya mwǎsí mwa moto. 
 
 [[Category:Eténi ya nzóto]]
+
+
+[[cs:Mléčná žláza]]
+[[de:Milchdrüse]]
 [[en:Mammary gland]]
+[[eo:Laktoglando]]
+[[he:בלוטות חלב]]
+[[is:Mjólkurkirtill]]
+[[ln:Libɛ́lɛ]]
+[[lt:Pieno liauka]]
+[[nl:Melkklier]]
+[[pl:Gruczoł mlekowy]]
+[[zh:乳腺]]
