--- a/Maluku_(Kinsásá).mw
+++ b/Maluku_(Kinsásá).mw
@@ -3,7 +3,7 @@
 nom=Commune de Maluku|
 ville=[[Kinshasa]]|
 bourgmestre=M. [[Lovodi Kale]]|
-lg=[[Lingala]]|
+lg=[[Lingála]]|
 supkm2=7948,8|
 pop= 65.000|
 annéepop= [[1995]]|
