--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -1,7 +1,7 @@
 {{Commune RDC 2005|
 nom=Commune de Bandalungwa|
 ville=[[Kinshasa]]|
-bourgmestre=Mme [[Marie-Antoinette Makayabu]]|
+bourgmestre=Mme [[Marie-Antoinette Makayuba]]|
 lg=[[Lingála]]|
 supkm2=6,28|
 pop= 134.774|
