*Empty MediaWiki Message*

--- a/Maluku_(Kinsásá).mw
+++ b/Maluku_(Kinsásá).mw
@@ -1,4 +1,4 @@
-{{ndambo}}
+{{ndámbo}}
 {{Commune RDC 2005|
 nom=Commune de Maluku|
 ville=[[Kinshasa]]|
@@ -14,11 +14,11 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 [[Image:Maluku.jpg|thumb|right|250px|Baleinière sur le Congo au niveau de Maluku]]
 
 
-'''Maluku''' ezali na mosika komini ya monene koleka, okati engumba [[Kinshasa]]. Ekoki solo 79% ya etando wa engumba ena. Ekutani o eteni Nor-Este ya engumba-etuka, na ebimeli ya likolo ya [[Pool Malebo]] (eyebanaki kala o nkombo ''Stanley Pool''). Le lieu est connu pour avoir hébergé une importante usine sidérurgique de 1974 à 1976 (traitement à froid) et 1980 (traitement à chaud). 
+'''Maluku''' ezalí na mosíká komini ya monɛ́nɛ koleka, o kati engúmba [[Kinshasa]]. Ekokí sɔ̂lɔ 79% ya etando wa engúmba êná. Ekutani o eténi Nor-Este ya engúmba-etuka, na ebimélí ya likoló ya [[Pool Malebo]] (eyébánákí kala o nkómbó ''Stanley Pool''). ''Le lieu est connu pour avoir hébergé une importante usine sidérurgique de 1974 à 1976 (traitement à froid) et 1980 (traitement à chaud).''
 
-==Tala mpe==
+==Tálá mpé==
 
-===Mankasa okati Wikipedia===
+===Mankásá o káti Wikipedia===
 
 *[[Molongo ya ba komini ya Kinshasa]]
 
