*Empty MediaWiki Message*

--- a/Maluku_(Kinsásá).mw
+++ b/Maluku_(Kinsásá).mw
@@ -14,7 +14,7 @@ ProvIII=[[Kinshasa (province Constitution 2005)|Kinshasa]]
 [[Image:Maluku.jpg|thumb|right|250px|Baleinière sur le Congo au niveau de Maluku]]
 
 
-'''Maluku''' ezalí na mosíká komini ya monɛ́nɛ koleka, o kati engúmba [[Kinshasa]]. Ekokí sɔ̂lɔ 79% ya etando wa engúmba êná. Ekutani o eténi Nor-Este ya engúmba-etuka, na ebimélí ya likoló ya [[Pool Malebo]] (eyébánákí kala o nkómbó ''Stanley Pool''). ''Le lieu est connu pour avoir hébergé une importante usine sidérurgique de 1974 à 1976 (traitement à froid) et 1980 (traitement à chaud).''
+'''Maluku''' ezalí na mosíká komini ya monɛ́nɛ koleka, o kati engúmba [[Kinshasa]]. Ekokí sɔ̂lɔ 79% ya etando wa engúmba êná. Ekutani o eténi Nor-Este ya engúmba-etuka, na ebimélí ya likoló ya [[Pool Malebo]] (eyébánákí kala o nkómbó ''Stanley Pool''). Ezaláká motóngá [[etúleli]] ya [[aluminyu]]. 
 
 ==Tálá mpé==
 
