--- a/Ngaliéma.mw
+++ b/Ngaliéma.mw
@@ -2,7 +2,7 @@
 {{Commune RDC 2005|
 nom=Commune de Ngaliema|
 ville=[[Kinshasa]]|
-bourgmestre=M. Mwanandeke|
+bourgmestre=[[M. Mwanandeke]]|
 lg=[[Lingála]]|
 supkm2=?|
 pop= ?|
