--- a/Charles_Mwanandeke.mw
+++ b/Charles_Mwanandeke.mw
@@ -1,4 +1,4 @@
-'''M. Mwanandeke''' azali [[bourgemestre]] ya [[Ngaliema]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
+'''Charles Mwanandeke''' azali [[bourgemestre]] ya [[Ngaliema]]. Bonakiye na mokoloya [[8 yuli]] [[2005]] na [[Joseph Kabila]]. 
 
 {{ndámbo}}
 [[Category:Moto wa politiki ya Kisásá]]
