--- a/Liboke_ya_Congo.mw
+++ b/Liboke_ya_Congo.mw
@@ -5,7 +5,7 @@
 
 "Liboke ya Congo" includes a set of Lingála-localized Applications. Most of the work of translation and research has been done by BnB-staff in [[Kinshasa]]. The "Liboke ya Congo" will help to bring IT-knowledge and better means of communication to many people in [[Kɔ́ngɔ-Kinshasa|RKD]] and its neighbour-countries. Also it can be seen as an important step in building up a self-sustainable, localized IT-culture.
 
-==Further informations==
+==Tála mpé==
 *Contactperson Kinshasa: Léon BUKASA TSHIBAKA, Tel (+243) 819 84 45 10, Email: libokeyacongo@yahoo.fr
 *Contactperson Vienna: Ingo LANTSCHNER, Tel (+43-1) 595 57 66, Email: ingo@vum.at
 
