sign under new name on commons

--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -1,4 +1,4 @@
-[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|[[Image:FIAV_63.png]] Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa]]
+[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|[[Image:FIAV 111111.png]] Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa]]
 [[Image:Flag of Congo Free State.svg|right|thumb|188px|Bɛndɛ́lɛ na ntángo ya banɔ́kɔ́ (1877-1960)]]
 [[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|1960-1963]]
 [[Image:Flag of Congo Kinshasa 1963.svg|right|thumb|188px|1963-1966]]
