--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -1,4 +1,4 @@
-[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|[[Image:FIAV 111111.png]] Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa]]
+[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|[[Image:FIAV_63.png]] Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa]]
 [[Image:Flag of Congo Free State.svg|right|thumb|188px|Bɛndɛ́lɛ na ntángo ya banɔ́kɔ́ (1877-1960)]]
 [[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|1960-1963]]
 [[Image:Flag of Congo Kinshasa 1963.svg|right|thumb|188px|1963-1966]]
@@ -9,13 +9,12 @@
 
 {{nationalflags}}<!-- to edit this table, go to [[Template:Nationalflags]] -->
 
-
 [[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
 [[Category:Bɛndɛ́lɛ ya bisé|Kɔ́ngɔ Demokratiki, Repubiliki ya]]
 
 [[de:Flagge der Demokratischen Republik Kongo]]
 [[es:Bandera de la República Democrática del Congo]]
-[[he:&#1491;&#1490;&#1500; &#1492;&#1512;&#1508;&#1493;&#1489;&#1500;&#1497;&#1511;&#1492; &#1492;&#1491;&#1502;&#1493;&#1511;&#1512;&#1496;&#1497;&#1514; &#1513;&#1500; &#1511;&#1493;&#1504;&#1490;&#1493;]]
+[[he:דגל הרפובליקה הדמוקרטית של קונגו]]
 [[it:Bandiera della Repubblica Democratica del Congo]]
 [[sv:Demokratiska republiken Kongos flagga]]
 [[fr:Drapeau de la Republique Democratique du Congo]]
