*Empty MediaWiki Message*

--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -27,6 +27,6 @@
 
 
 <!-- Liens sur autres Wikipedias sur la page principale: priere de limiter a un petit nombre. -->
-[[ak:]] [[fr:]] [[en:]] [[pt:]] [[af:]] [[sw:]] [[kg:]] [[simple:]] [[es:]] [[eo:]] [[wo:]]
+[[af:]] [[ak:]] [[fr:]] [[en:]] [[eo:]] [[es:]] [[sw:]] [[kg:]] [[nl:]] [[pt:]] [[simple:]] [[wo:]]
 
 __NOTOC__
