--- a/Bilembo-nkita_bya_bisé.mw
+++ b/Bilembo-nkita_bya_bisé.mw
@@ -35,7 +35,7 @@ __NOTOC__
 {| border=&quot;1&quot; cellpadding=&quot;5&quot;
 |width=&quot;240&quot;| [[Bahamas]] || [[Image:Bahamas_coa.png|120px]]
 |-
-| [[Bahrain]] || [[Image:Coa_bahrain_small.jpg|120px]]
+| [[Bahrain]] || [[Bahrain coa.png|120px]]
 |-
 | [[Bangladesh]] || [[Image:Bangladesh_coa.png|120px]]
 |-
