--- a/Lokásá_ya_libosó.mw
+++ b/Lokásá_ya_libosó.mw
@@ -10,10 +10,10 @@
 | width="30%" style="border: none; background-color:#efefef; padding:0em;" valign="top" |
 {| cellspacing="0px" cellpadding="0"
 | style="border: 1px solid #6688AA; background-color:#efefef; padding:0.5em;" valign="middle"  |
-{{Lonkásá ya libosó/Óyo nini}}
+{{Lonkásá ya libosó/Óyo níni}}
 |-
 |
-{{Lonkásá ya libosó/Nsango nini}}
+{{Lonkásá ya libosó/Nsango níni}}
 |-
 |
 {{Lonkásá ya libosó/Kosálisa}}
