--- a/Lingála.mw
+++ b/Lingála.mw
@@ -106,6 +106,7 @@ Comment améliorer un article sur une langue?
 [[am:ሊንጋላ]]
 [[de:Lingala]]
 [[en:Lingala]]
+[[eo:Lingala]]
 [[es:Lingala]]
 [[fr:Lingala]]
 [[nl:Lingala]]
