--- a/Mángolá.mw
+++ b/Mángolá.mw
@@ -1,3 +1,6 @@
 [[Image:Keyboard-gray-old.jpg|thumb|*]]
 {{ndámbo}}
 [[category:Esálela]]
+[[de:Tastatur]]
+[[en:Computer keyboard]]
+[[fr:Clavier informatique]]
